--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,1 +1,20 @@
 /build
+/.DS_Store
+/captures
+/.metadata
+/.svn
+/obj
+/.externalToolBuilders
+bin
+gen
+/.gradle
+.gradle
+build
+.settings
+target
+*.iml
+/.idea
+.idea
+local.properties
+hs_err_pid4720.log
+gradle/wrapper/gradle-wrapper.properties
