--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         <activity
             android:name=".ui.activity.MainActivity"
             android:launchMode="singleTask"
-            android:screenOrientation="landscape"
+            android:configChanges="keyboard"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
