--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,6 @@ dependencies {
     // 轮播图
     compile 'com.youth.banner:banner:1.4.10'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.28'
 }
