修改忽略文件

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,24 @@
-*.iml
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
-.DS_Store
 /build
+/.DS_Store
 /captures
+/.metadata
+/.svn
+/obj
+/.externalToolBuilders
+bin
+gen
+/.gradle
+.gradle
+build
+.settings
+target
+*.iml
+/.idea
+.idea
+local.properties
+hs_err_pid4720.log
+gradle/wrapper/gradle-wrapper.properties
+IMKit/build
+IMLib/libs
+CallLib/build
+CallKit/build
