又是一大推东西，编译运行不会报错了，我Clear了下

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,6 +71,10 @@
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".ui.activity.FeedBackActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".ui.activity.VipActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".ui.activity.AboutAppActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
 
         <receiver
             android:name=".rong.SealNotificationReceiver"
