--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "26.0.1"
     defaultConfig {
         applicationId "dhcc.cn.com.fix_phone"
-        minSdkVersion 14
+        minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -85,4 +85,9 @@ dependencies {
     compile ('com.github.bumptech.glide:okhttp3-integration:1.4.0'){
         exclude group: 'glide-parent'
     }
+
+    compile "com.github.Raizlabs.DBFlow:dbflow-core:4.0.3"
+    compile "com.github.Raizlabs.DBFlow:dbflow:4.0.3"
+    compile "com.github.Raizlabs.DBFlow:dbflow-rx2:4.0.3"
+    annotationProcessor "com.github.Raizlabs.DBFlow:dbflow-processor:4.0.3"
 }
