--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.jakewharton.butterknife'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    buildToolsVersion '26.0.0'
     defaultConfig {
         applicationId "dhcc.cn.com.fix_phone"
         minSdkVersion 15
@@ -33,6 +33,13 @@ android {
         exclude 'META-INF/NOTICE'
     }
 
+    dexOptions {
+        incremental true
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
 }
 
 repositories {
@@ -56,10 +63,7 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'io.reactivex:rxjava:1.1.6'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     // 下拉刷新
     compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.3'
     // 滑动销毁fragment activity
@@ -73,21 +77,15 @@ dependencies {
     compile(name: 'HMS-SDK-2.4.0.300', ext: 'aar')
     compile project(':IMKit')
     compile 'com.orhanobut:logger:2.1.1'
-
     compile 'com.github.chrisbanes:PhotoView:1.3.0'
     compile 'com.malinskiy:superrecyclerview:1.1.4'
     compile 'com.mikhaellopez:circularprogressbar:1.1.1'
-
     compile 'pub.devrel:easypermissions:0.2.1'
-
     compile 'com.github.rubensousa:bottomsheetbuilder:1.6.0'
-
-    compile ('com.github.bumptech.glide:okhttp3-integration:1.4.0'){
+    compile('com.github.bumptech.glide:okhttp3-integration:1.4.0') {
         exclude group: 'glide-parent'
     }
-
-    compile "com.github.Raizlabs.DBFlow:dbflow-core:4.0.3"
-    compile "com.github.Raizlabs.DBFlow:dbflow:4.0.3"
-    compile "com.github.Raizlabs.DBFlow:dbflow-rx2:4.0.3"
-    annotationProcessor "com.github.Raizlabs.DBFlow:dbflow-processor:4.0.3"
+    compile 'com.github.Raizlabs.DBFlow:dbflow-core:4.1.1'
+    compile 'com.github.Raizlabs.DBFlow:dbflow:4.1.1'
+    annotationProcessor "com.github.Raizlabs.DBFlow:dbflow-processor:4.1.1"
 }
