--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,8 +87,8 @@
             android:theme="@style/AppTheme.NoActionBar">
 
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
@@ -231,8 +231,15 @@
         <activity
             android:name=".ui.activity.ImagePagerActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".ui.activity.BusinessActivity"/>
-        <activity android:name=".ui.activity.ProductActivity"/>
+        <activity
+            android:name=".ui.activity.BusinessActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".ui.activity.ProductActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".ui.activity.ContactWayActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
 
 
         <meta-data
