--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -240,6 +240,9 @@
         <activity
             android:name=".ui.activity.ContactWayActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".ui.activity.MineCirCleActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
 
 
         <meta-data
