--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,4 +94,6 @@ dependencies {
     // 权限
     compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.1@aar'
     compile 'io.reactivex.rxjava2:rxjava:2.0.5'
+
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
