--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="dhcc.cn.com.fix_phone"
+          xmlns:tools="http://schemas.android.com/tools"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -222,7 +223,6 @@
                 android:resource="@xml/rc_file_path"/>
         </provider>
 
-
         <activity
             android:name=".ui.activity.CircleActivity"
             android:label="@string/app_name"
@@ -246,16 +246,6 @@
         <activity
             android:name=".ui.activity.PublishActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
-
-        <provider
-            android:name="android.support.v4.content.FileProvider"
-            android:authorities="com.zhihu.matisse.sample.fileprovider"
-            android:exported="false"
-            android:grantUriPermissions="true">
-            <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths_public"/>
-        </provider>
 
         <meta-data
             android:name="dhcc.cn.com.fix_phone.MyGlideModule"
