--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,6 +94,9 @@ dependencies {
     // 权限
     compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.1@aar'
     compile 'io.reactivex.rxjava2:rxjava:2.0.5'
-
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+
+    compile 'com.miguelcatalan:materialsearchview:1.4.0'
 }
