--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,4 +99,6 @@ dependencies {
     compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
 
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
+
+    compile 'com.zhy:okhttputils:2.0.0'
 }
