--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -268,6 +268,7 @@
             android:name=".ui.activity.PublishActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".wxapi.WXEntryActivity"/>
 
         <meta-data
             android:name="dhcc.cn.com.fix_phone.MyGlideModule"
