--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':IMKit', ':IMLib',':bottomsheetbuilder',':matisse'
+include ':app', ':IMKit', ':IMLib',':bottomsheetbuilder',':matisse',':okhttputils'
