--- a/app/build.gradle
+++ b/app/build.gradle
@@ -149,7 +149,7 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
-    compile 'com.zhy:okhttputils:2.0.0'
     //微信
     compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
+    compile project(':okhttputils')
 }
