--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ allprojects {
     repositories {
 //        jcenter()
         maven { url "https://www.jitpack.io" }
+        maven { url 'https://jitpack.io' }
         maven{ url 'http://maven.aliyun.com/nexus/content/groups/public'}
     }
 }
