修改Rong链接问题

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,7 @@
                 <category android:name="android.intent.category.DEFAULT"/>
                 <data
                     android:host="dhcc.cn.com.fix_phone"
-                    android:path="/conversationlist"
+                    android:path="/conversation"
                     android:scheme="rong"/>
             </intent-filter>
         </activity>
