--- a/IMLib/AndroidManifest.xml
+++ b/IMLib/AndroidManifest.xml
@@ -1,44 +1,46 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="io.rong.imlib">
+<manifest package="io.rong.imlib"
+          xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-sdk
         android:minSdkVersion="15"
-        android:targetSdkVersion="20" />
+        android:targetSdkVersion="20"/>
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.GET_TASKS" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
-    <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.GET_TASKS"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
     <application>
 
         <!-- imlib config begin -->
         <meta-data
             android:name="RONG_CLOUD_APP_KEY"
-                android:value="k51hidwqk9m4b" />
+            android:value="tdrvipksth8y5"/>
 
         <service
             android:name="io.rong.imlib.ipc.RongService"
             android:exported="true"
-            android:process=":ipc" />
+            android:process=":ipc"/>
 
-        <service android:name="io.rong.imlib.ReConnectService"
+        <service
+            android:name="io.rong.imlib.ReConnectService"
             android:exported="true"/>
 
-        <receiver android:name="io.rong.imlib.ConnectChangeReceiver"
+        <receiver
+            android:name="io.rong.imlib.ConnectChangeReceiver"
             android:exported="true"/>
 
         <receiver
             android:name="io.rong.imlib.HeartbeatReceiver"
-            android:process=":ipc" />
+            android:process=":ipc"/>
         <!-- imlib config end -->
 
 
@@ -68,23 +70,23 @@
             android:process="io.rong.push">   <!-- 此处进程可以改名，名称需要和PushService所在进程统一 -->
             <!-- 心跳事件 -->
             <intent-filter>
-                <action android:name="io.rong.push.intent.action.HEART_BEAT" />
+                <action android:name="io.rong.push.intent.action.HEART_BEAT"/>
             </intent-filter>
             <!-- 网络变动事件 -->
             <intent-filter>
-                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
             </intent-filter>
             <!-- 部分用户事件 -->
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
             <intent-filter>
-                <action android:name="android.intent.action.USER_PRESENT" />
-                <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
-                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
+                <action android:name="android.intent.action.USER_PRESENT"/>
+                <action android:name="android.intent.action.ACTION_POWER_CONNECTED"/>
+                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED"/>
             </intent-filter>
         </receiver>
-        
+
         <!--必选： SDK 核心功能-->
 
         <!-- end -->
